// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerBar > (Snapshot) active states render 1`] = `
<DocumentFragment>
  <footer
    class="bg-background-secondary border-border flex h-16 items-center border-t-(length:--border-width) px-4"
  >
    <div
      class="grid w-full grid-cols-[minmax(0,1fr)_auto_minmax(0,1fr)] items-center gap-4"
    >
      <div
        class="min-w-0"
      >
        <div
          class="group/now-playing flex min-w-0 items-center gap-3"
        >
          <div
            class="border-border bg-background-secondary group-hover/now-playing:shadow-shadow size-12 shrink-0 overflow-hidden rounded-md border-(length:--border-width) transition-[box-shadow,transform] duration-150 ease-out group-hover/now-playing:-translate-y-0.5 motion-reduce:transition-none motion-reduce:group-hover/now-playing:translate-y-0"
          >
            <img
              alt=""
              class="size-full object-cover transition-[filter,transform] duration-200 ease-out select-none group-hover/now-playing:scale-105 group-hover/now-playing:brightness-110 motion-reduce:transition-none motion-reduce:group-hover/now-playing:scale-100"
              data-testid="player-now-playing-thumbnail"
              src="https://picsum.photos/48"
            />
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="text-foreground truncate text-sm font-bold"
              data-testid="now-playing-title"
              title="Crystalized"
            >
              Crystalized
            </div>
            <div
              class="text-foreground-secondary truncate text-xs"
              data-testid="player-now-playing-artist"
              title="XX"
            >
              XX
            </div>
          </div>
        </div>
      </div>
      <div
        class="justify-self-center"
      >
        <div
          class="flex items-center justify-center gap-2"
        >
          <div>
            <button
              class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none hover:brightness-105 active:brightness-95 size-10 justify-center scale-105 relative after:absolute after:right-1 after:bottom-1 after:size-1.5 after:rounded-full after:bg-foreground after:content-[""] after:shadow-[0_0_0_2px_var(--primary)]"
              data-headlessui-state=""
              data-testid="player-shuffle-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shuffle transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m18 14 4 4-4 4"
                />
                <path
                  d="m18 2 4 4-4 4"
                />
                <path
                  d="M2 18h1.973a4 4 0 0 0 3.3-1.7l5.454-8.6a4 4 0 0 1 3.3-1.7H22"
                />
                <path
                  d="M2 6h1.972a4 4 0 0 1 3.6 2.2"
                />
                <path
                  d="M22 18h-6.041a4 4 0 0 1-3.3-1.8l-.359-.45"
                />
              </svg>
            </button>
          </div>
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
            data-headlessui-state=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-skip-back transition-transform duration-150 group-hover:-translate-x-0.5 motion-reduce:transition-none motion-reduce:group-hover:translate-x-0"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.971 4.285A2 2 0 0 1 21 6v12a2 2 0 0 1-3.029 1.715l-9.997-5.998a2 2 0 0 1-.003-3.432z"
              />
              <path
                d="M3 20V4"
              />
            </svg>
          </button>
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none hover:brightness-105 active:brightness-95 justify-center group size-11 hover:scale-105 active:scale-95 motion-reduce:hover:scale-100 motion-reduce:active:scale-100 animate-pulse-play"
            data-headlessui-state=""
            data-testid="player-pause-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-pause transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="1"
                width="5"
                x="14"
                y="3"
              />
              <rect
                height="18"
                rx="1"
                width="5"
                x="5"
                y="3"
              />
            </svg>
          </button>
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
            data-headlessui-state=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-skip-forward transition-transform duration-150 group-hover:translate-x-0.5 motion-reduce:transition-none motion-reduce:group-hover:translate-x-0"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4v16"
              />
              <path
                d="M6.029 4.285A2 2 0 0 0 3 6v12a2 2 0 0 0 3.029 1.715l9.997-5.998a2 2 0 0 0 .003-3.432z"
              />
            </svg>
          </button>
          <div>
            <button
              class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none hover:brightness-105 active:brightness-95 size-10 justify-center scale-105 relative after:absolute after:right-1 after:bottom-1 after:size-1.5 after:rounded-full after:bg-foreground after:content-[""] after:shadow-[0_0_0_2px_var(--primary)]"
              data-headlessui-state=""
              data-testid="player-repeat-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-repeat"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m17 2 4 4-4 4"
                />
                <path
                  d="M3 11v-1a4 4 0 0 1 4-4h14"
                />
                <path
                  d="m7 22-4-4 4-4"
                />
                <path
                  d="M21 13v1a4 4 0 0 1-4 4H3"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="justify-self-end"
      >
        <div
          class="group/volume flex items-center gap-2"
        >
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
            data-headlessui-state=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-volume2 lucide-volume-2 transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
              />
              <path
                d="M16 9a5 5 0 0 1 0 6"
              />
              <path
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
              />
            </svg>
          </button>
          <div
            class="w-24 transition-[opacity,filter] duration-150 group-hover/volume:brightness-110 motion-reduce:transition-none"
            data-testid="player-volume-slider"
          >
            <div
              class="flex w-full flex-col gap-2"
            >
              <div
                class="relative h-6 w-full overscroll-contain"
              >
                <div
                  class="pointer-events-none absolute inset-x-0 top-1/2 -translate-y-1/2"
                >
                  <div
                    class="border-border bg-background-input relative h-3 w-full rounded-md border-(length:--border-width)"
                  >
                    <div
                      class="bg-primary absolute top-0 left-0 h-full rounded-l transition-[width] duration-150 ease-out"
                      style="width: 60%;"
                    />
                    <div
                      class="border-border absolute top-1/2 -ml-2 h-5 w-5 -translate-y-1/2 rounded-full border-(length:--border-width) bg-white transition-[left] duration-150 ease-out"
                      style="left: 60%;"
                    />
                  </div>
                </div>
                <input
                  aria-labelledby=":r1:-label"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="60"
                  aria-valuetext="60"
                  class="absolute inset-0 z-[1] h-6 w-full appearance-none opacity-0 cursor-pointer"
                  id=":r1:"
                  max="100"
                  min="0"
                  step="1"
                  type="range"
                  value="60"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`PlayerBar > (Snapshot) default render 1`] = `
<DocumentFragment>
  <footer
    class="bg-background-secondary border-border flex h-16 items-center border-t-(length:--border-width) px-4"
  >
    <div
      class="grid w-full grid-cols-[minmax(0,1fr)_auto_minmax(0,1fr)] items-center gap-4"
    >
      <div
        class="min-w-0"
      >
        <div
          class="group/now-playing flex min-w-0 items-center gap-3"
        >
          <div
            class="border-border bg-background-secondary group-hover/now-playing:shadow-shadow size-12 shrink-0 overflow-hidden rounded-md border-(length:--border-width) transition-[box-shadow,transform] duration-150 ease-out group-hover/now-playing:-translate-y-0.5 motion-reduce:transition-none motion-reduce:group-hover/now-playing:translate-y-0"
          >
            <img
              alt=""
              class="size-full object-cover transition-[filter,transform] duration-200 ease-out select-none group-hover/now-playing:scale-105 group-hover/now-playing:brightness-110 motion-reduce:transition-none motion-reduce:group-hover/now-playing:scale-100"
              data-testid="player-now-playing-thumbnail"
              src="https://picsum.photos/48"
            />
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="text-foreground truncate text-sm font-bold"
              data-testid="now-playing-title"
              title="Song Title"
            >
              Song Title
            </div>
            <div
              class="text-foreground-secondary truncate text-xs"
              data-testid="player-now-playing-artist"
              title="Artist Name"
            >
              Artist Name
            </div>
          </div>
        </div>
      </div>
      <div
        class="justify-self-center"
      >
        <div
          class="flex items-center justify-center gap-2"
        >
          <div>
            <button
              class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center"
              data-headlessui-state=""
              data-testid="player-shuffle-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shuffle transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m18 14 4 4-4 4"
                />
                <path
                  d="m18 2 4 4-4 4"
                />
                <path
                  d="M2 18h1.973a4 4 0 0 0 3.3-1.7l5.454-8.6a4 4 0 0 1 3.3-1.7H22"
                />
                <path
                  d="M2 6h1.972a4 4 0 0 1 3.6 2.2"
                />
                <path
                  d="M22 18h-6.041a4 4 0 0 1-3.3-1.8l-.359-.45"
                />
              </svg>
            </button>
          </div>
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
            data-headlessui-state=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-skip-back transition-transform duration-150 group-hover:-translate-x-0.5 motion-reduce:transition-none motion-reduce:group-hover:translate-x-0"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.971 4.285A2 2 0 0 1 21 6v12a2 2 0 0 1-3.029 1.715l-9.997-5.998a2 2 0 0 1-.003-3.432z"
              />
              <path
                d="M3 20V4"
              />
            </svg>
          </button>
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none hover:brightness-105 active:brightness-95 justify-center group size-11 hover:scale-105 active:scale-95 motion-reduce:hover:scale-100 motion-reduce:active:scale-100"
            data-headlessui-state=""
            data-testid="player-play-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-play translate-x-px transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
              />
            </svg>
          </button>
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
            data-headlessui-state=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-skip-forward transition-transform duration-150 group-hover:translate-x-0.5 motion-reduce:transition-none motion-reduce:group-hover:translate-x-0"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4v16"
              />
              <path
                d="M6.029 4.285A2 2 0 0 0 3 6v12a2 2 0 0 0 3.029 1.715l9.997-5.998a2 2 0 0 0 .003-3.432z"
              />
            </svg>
          </button>
          <div>
            <button
              class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center"
              data-headlessui-state=""
              data-testid="player-repeat-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-repeat"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m17 2 4 4-4 4"
                />
                <path
                  d="M3 11v-1a4 4 0 0 1 4-4h14"
                />
                <path
                  d="m7 22-4-4 4-4"
                />
                <path
                  d="M21 13v1a4 4 0 0 1-4 4H3"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="justify-self-end"
      >
        <div
          class="group/volume flex items-center gap-2"
        >
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
            data-headlessui-state=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-volume2 lucide-volume-2 transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
              />
              <path
                d="M16 9a5 5 0 0 1 0 6"
              />
              <path
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
              />
            </svg>
          </button>
          <div
            class="w-24 transition-[opacity,filter] duration-150 group-hover/volume:brightness-110 motion-reduce:transition-none"
            data-testid="player-volume-slider"
          >
            <div
              class="flex w-full flex-col gap-2"
            >
              <div
                class="relative h-6 w-full overscroll-contain"
              >
                <div
                  class="pointer-events-none absolute inset-x-0 top-1/2 -translate-y-1/2"
                >
                  <div
                    class="border-border bg-background-input relative h-3 w-full rounded-md border-(length:--border-width)"
                  >
                    <div
                      class="bg-primary absolute top-0 left-0 h-full rounded-l transition-[width] duration-150 ease-out"
                      style="width: 75%;"
                    />
                    <div
                      class="border-border absolute top-1/2 -ml-2 h-5 w-5 -translate-y-1/2 rounded-full border-(length:--border-width) bg-white transition-[left] duration-150 ease-out"
                      style="left: 75%;"
                    />
                  </div>
                </div>
                <input
                  aria-labelledby=":r0:-label"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="75"
                  aria-valuetext="75"
                  class="absolute inset-0 z-[1] h-6 w-full appearance-none opacity-0 cursor-pointer"
                  id=":r0:"
                  max="100"
                  min="0"
                  step="1"
                  type="range"
                  value="75"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`PlayerBar > (Snapshot) long metadata truncation 1`] = `
<DocumentFragment>
  <div
    style="width: 420px;"
  >
    <footer
      class="bg-background-secondary border-border flex h-16 items-center border-t-(length:--border-width) px-4"
    >
      <div
        class="grid w-full grid-cols-[minmax(0,1fr)_auto_minmax(0,1fr)] items-center gap-4"
      >
        <div
          class="min-w-0"
        >
          <div
            class="group/now-playing flex min-w-0 items-center gap-3"
          >
            <div
              class="border-border bg-background-secondary group-hover/now-playing:shadow-shadow size-12 shrink-0 overflow-hidden rounded-md border-(length:--border-width) transition-[box-shadow,transform] duration-150 ease-out group-hover/now-playing:-translate-y-0.5 motion-reduce:transition-none motion-reduce:group-hover/now-playing:translate-y-0"
            >
              <img
                alt=""
                class="size-full object-cover transition-[filter,transform] duration-200 ease-out select-none group-hover/now-playing:scale-105 group-hover/now-playing:brightness-110 motion-reduce:transition-none motion-reduce:group-hover/now-playing:scale-100"
                data-testid="player-now-playing-thumbnail"
                src="https://picsum.photos/48"
              />
            </div>
            <div
              class="min-w-0 flex-1"
            >
              <div
                class="text-foreground truncate text-sm font-bold"
                data-testid="now-playing-title"
                title="An Incredibly, Ridiculously Long Song Title That Should Truncate Nicely"
              >
                An Incredibly, Ridiculously Long Song Title That Should Truncate Nicely
              </div>
              <div
                class="text-foreground-secondary truncate text-xs"
                data-testid="player-now-playing-artist"
                title="A Very Long Artist Name Featuring Another Long Artist With Even More Characters"
              >
                A Very Long Artist Name Featuring Another Long Artist With Even More Characters
              </div>
            </div>
          </div>
        </div>
        <div
          class="justify-self-center"
        >
          <div
            class="flex items-center justify-center gap-2"
          >
            <div>
              <button
                class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center"
                data-headlessui-state=""
                data-testid="player-shuffle-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-shuffle transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m18 14 4 4-4 4"
                  />
                  <path
                    d="m18 2 4 4-4 4"
                  />
                  <path
                    d="M2 18h1.973a4 4 0 0 0 3.3-1.7l5.454-8.6a4 4 0 0 1 3.3-1.7H22"
                  />
                  <path
                    d="M2 6h1.972a4 4 0 0 1 3.6 2.2"
                  />
                  <path
                    d="M22 18h-6.041a4 4 0 0 1-3.3-1.8l-.359-.45"
                  />
                </svg>
              </button>
            </div>
            <button
              class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
              data-headlessui-state=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-skip-back transition-transform duration-150 group-hover:-translate-x-0.5 motion-reduce:transition-none motion-reduce:group-hover:translate-x-0"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.971 4.285A2 2 0 0 1 21 6v12a2 2 0 0 1-3.029 1.715l-9.997-5.998a2 2 0 0 1-.003-3.432z"
                />
                <path
                  d="M3 20V4"
                />
              </svg>
            </button>
            <button
              class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none hover:brightness-105 active:brightness-95 justify-center group size-11 hover:scale-105 active:scale-95 motion-reduce:hover:scale-100 motion-reduce:active:scale-100"
              data-headlessui-state=""
              data-testid="player-play-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-play translate-x-px transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
                />
              </svg>
            </button>
            <button
              class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
              data-headlessui-state=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-skip-forward transition-transform duration-150 group-hover:translate-x-0.5 motion-reduce:transition-none motion-reduce:group-hover:translate-x-0"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 4v16"
                />
                <path
                  d="M6.029 4.285A2 2 0 0 0 3 6v12a2 2 0 0 0 3.029 1.715l9.997-5.998a2 2 0 0 0 .003-3.432z"
                />
              </svg>
            </button>
            <div>
              <button
                class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center"
                data-headlessui-state=""
                data-testid="player-repeat-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-repeat"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m17 2 4 4-4 4"
                  />
                  <path
                    d="M3 11v-1a4 4 0 0 1 4-4h14"
                  />
                  <path
                    d="m7 22-4-4 4-4"
                  />
                  <path
                    d="M21 13v1a4 4 0 0 1-4 4H3"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="justify-self-end"
        >
          <div
            class="group/volume flex items-center gap-2"
          >
            <button
              class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
              data-headlessui-state=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-volume2 lucide-volume-2 transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </button>
            <div
              class="w-24 transition-[opacity,filter] duration-150 group-hover/volume:brightness-110 motion-reduce:transition-none"
              data-testid="player-volume-slider"
            >
              <div
                class="flex w-full flex-col gap-2"
              >
                <div
                  class="relative h-6 w-full overscroll-contain"
                >
                  <div
                    class="pointer-events-none absolute inset-x-0 top-1/2 -translate-y-1/2"
                  >
                    <div
                      class="border-border bg-background-input relative h-3 w-full rounded-md border-(length:--border-width)"
                    >
                      <div
                        class="bg-primary absolute top-0 left-0 h-full rounded-l transition-[width] duration-150 ease-out"
                        style="width: 50%;"
                      />
                      <div
                        class="border-border absolute top-1/2 -ml-2 h-5 w-5 -translate-y-1/2 rounded-full border-(length:--border-width) bg-white transition-[left] duration-150 ease-out"
                        style="left: 50%;"
                      />
                    </div>
                  </div>
                  <input
                    aria-labelledby=":r2:-label"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="50"
                    aria-valuetext="50"
                    class="absolute inset-0 z-[1] h-6 w-full appearance-none opacity-0 cursor-pointer"
                    id=":r2:"
                    max="100"
                    min="0"
                    step="1"
                    type="range"
                    value="50"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`PlayerBar > (Snapshot) no artwork fallback 1`] = `
<DocumentFragment>
  <footer
    class="bg-background-secondary border-border flex h-16 items-center border-t-(length:--border-width) px-4"
  >
    <div
      class="grid w-full grid-cols-[minmax(0,1fr)_auto_minmax(0,1fr)] items-center gap-4"
    >
      <div
        class="min-w-0"
      >
        <div
          class="group/now-playing flex min-w-0 items-center gap-3"
        >
          <div
            class="border-border bg-background-secondary group-hover/now-playing:shadow-shadow size-12 shrink-0 overflow-hidden rounded-md border-(length:--border-width) transition-[box-shadow,transform] duration-150 ease-out group-hover/now-playing:-translate-y-0.5 motion-reduce:transition-none motion-reduce:group-hover/now-playing:translate-y-0"
          >
            <div
              class="text-foreground-secondary flex size-full items-center justify-center"
              data-testid="player-now-playing-placeholder"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-music2 lucide-music-2"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="8"
                  cy="18"
                  r="4"
                />
                <path
                  d="M12 18V2l7 4"
                />
              </svg>
            </div>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="text-foreground truncate text-sm font-bold"
              data-testid="now-playing-title"
              title="Untitled Track"
            >
              Untitled Track
            </div>
            <div
              class="text-foreground-secondary truncate text-xs"
              data-testid="player-now-playing-artist"
              title="Unknown Artist"
            >
              Unknown Artist
            </div>
          </div>
        </div>
      </div>
      <div
        class="justify-self-center"
      >
        <div
          class="flex items-center justify-center gap-2"
        >
          <div>
            <button
              class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center"
              data-headlessui-state=""
              data-testid="player-shuffle-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-shuffle transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m18 14 4 4-4 4"
                />
                <path
                  d="m18 2 4 4-4 4"
                />
                <path
                  d="M2 18h1.973a4 4 0 0 0 3.3-1.7l5.454-8.6a4 4 0 0 1 3.3-1.7H22"
                />
                <path
                  d="M2 6h1.972a4 4 0 0 1 3.6 2.2"
                />
                <path
                  d="M22 18h-6.041a4 4 0 0 1-3.3-1.8l-.359-.45"
                />
              </svg>
            </button>
          </div>
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
            data-headlessui-state=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-skip-back transition-transform duration-150 group-hover:-translate-x-0.5 motion-reduce:transition-none motion-reduce:group-hover:translate-x-0"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.971 4.285A2 2 0 0 1 21 6v12a2 2 0 0 1-3.029 1.715l-9.997-5.998a2 2 0 0 1-.003-3.432z"
              />
              <path
                d="M3 20V4"
              />
            </svg>
          </button>
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-(length:--border-width) hover:shadow-none hover:brightness-105 active:brightness-95 justify-center group size-11 hover:scale-105 active:scale-95 motion-reduce:hover:scale-100 motion-reduce:active:scale-100"
            data-headlessui-state=""
            data-testid="player-play-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-play translate-x-px transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
              />
            </svg>
          </button>
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
            data-headlessui-state=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-skip-forward transition-transform duration-150 group-hover:translate-x-0.5 motion-reduce:transition-none motion-reduce:group-hover:translate-x-0"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 4v16"
              />
              <path
                d="M6.029 4.285A2 2 0 0 0 3 6v12a2 2 0 0 0 3.029 1.715l9.997-5.998a2 2 0 0 0 .003-3.432z"
              />
            </svg>
          </button>
          <div>
            <button
              class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center"
              data-headlessui-state=""
              data-testid="player-repeat-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-repeat"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m17 2 4 4-4 4"
                />
                <path
                  d="M3 11v-1a4 4 0 0 1 4-4h14"
                />
                <path
                  d="m7 22-4-4 4-4"
                />
                <path
                  d="M21 13v1a4 4 0 0 1-4 4H3"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="justify-self-end"
      >
        <div
          class="group/volume flex items-center gap-2"
        >
          <button
            class="feedback-surface active:translate-x-shadow-x active:translate-y-shadow-y inline-flex cursor-pointer items-center overflow-hidden rounded-md whitespace-nowrap transition-all duration-300 [transition-timing-function:cubic-bezier(0.34,1.56,0.64,1)] outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 active:scale-[0.98] active:shadow-none disabled:cursor-not-allowed disabled:opacity-50 motion-reduce:transition-none motion-reduce:hover:transform-none motion-reduce:active:transform-none text-foreground bg-transparent hover:-translate-y-0.5 hover:bg-black/5 active:bg-black/10 size-10 justify-center group"
            data-headlessui-state=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-volume2 lucide-volume-2 transition-transform duration-150 group-hover:scale-110 motion-reduce:transition-none motion-reduce:group-hover:scale-100"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
              />
              <path
                d="M16 9a5 5 0 0 1 0 6"
              />
              <path
                d="M19.364 18.364a9 9 0 0 0 0-12.728"
              />
            </svg>
          </button>
          <div
            class="w-24 transition-[opacity,filter] duration-150 group-hover/volume:brightness-110 motion-reduce:transition-none"
            data-testid="player-volume-slider"
          >
            <div
              class="flex w-full flex-col gap-2"
            >
              <div
                class="relative h-6 w-full overscroll-contain"
              >
                <div
                  class="pointer-events-none absolute inset-x-0 top-1/2 -translate-y-1/2"
                >
                  <div
                    class="border-border bg-background-input relative h-3 w-full rounded-md border-(length:--border-width)"
                  >
                    <div
                      class="bg-primary absolute top-0 left-0 h-full rounded-l transition-[width] duration-150 ease-out"
                      style="width: 30%;"
                    />
                    <div
                      class="border-border absolute top-1/2 -ml-2 h-5 w-5 -translate-y-1/2 rounded-full border-(length:--border-width) bg-white transition-[left] duration-150 ease-out"
                      style="left: 30%;"
                    />
                  </div>
                </div>
                <input
                  aria-labelledby=":r3:-label"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="30"
                  aria-valuetext="30"
                  class="absolute inset-0 z-[1] h-6 w-full appearance-none opacity-0 cursor-pointer"
                  id=":r3:"
                  max="100"
                  min="0"
                  step="1"
                  type="range"
                  value="30"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
